syntax = "proto3";

package api.article.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

option go_package = "realworld/api/article/v1;v1";
option java_multiple_files = true;
option java_package = "api.article.v1";

service Article {
  rpc ListArticles (ListArticlesRequest) returns (ArticlesReply) {
    option (google.api.http) = {
      get: "/api/articles",
    };
  }
	rpc FeedArticles (FeedArticlesRequest) returns (ArticlesReply) {
    option (google.api.http) = {
      get: "/api/articles/feed",
    };
  }
	rpc GetArticle (GetArticleRequest) returns (ArticleReply) {
    option (google.api.http) = {
      get: "/api/articles/{slug}",
    };
  }
	rpc CreateArticle (CreateArticleRequest) returns (ArticleReply) {
    option (google.api.http) = {
      post: "/api/articles",
      body: "*",
    };
  }
	rpc UpdateArticle (UpdateArticleRequest) returns (ArticleReply) {
    option (google.api.http) = {
      put: "/api/articles/{slug}",
      body: "*",
    };
  }

	rpc DeleteArticle (DeleteArticleRequest) returns (DeleteArticleReply) {
    option (google.api.http) = {
      delete: "/api/articles/{slug}",
    };
  }

  rpc FavoriteArticle (FavoriteArticleRequest) returns (ArticleReply) {
    option (google.api.http) = {
      post: "/api/articles/{slug}/favorite",
      body: "*",
    };
  }

  rpc UnfavoriteArticle (UnfavoriteArticleRequest) returns (ArticleReply) {
    option (google.api.http) = {
      delete: "/api/articles/{slug}/favorite",
    };
  }
}

message ListArticlesRequest {
  string tag = 1;
  string author = 2;
  string favorited = 3;
  int64 limit = 4;
  int64 offset = 5;
}
message ArticlesReply  {
  message Author {
    string username = 1;
    string bio = 2;
    string image = 3;
    bool following = 4;
  }
  message Articles {
    string slug = 1;
    string title = 2;
    string description = 3;
    string body = 4;
    repeated string tagList = 5;
    google.protobuf.Timestamp createdAt = 6;
    google.protobuf.Timestamp updatedAt = 7;
    bool favorited = 8;
    uint32 favoritesCount = 9;
    Author author = 10;
  }

  repeated Articles articles = 1;
  uint32 articlesCount = 2;
}

message FeedArticlesRequest {
  int64 limit = 1;
  int64 offset = 2;
}

message GetArticleRequest {
  string slug = 1;
}
message ArticleReply {
  message Author {
    string username = 1;
    string bio = 2;
    string image = 3;
    bool following = 4;
  }

  string slug = 1;
  string title = 2;
  string description = 3;
  string body = 4;
  repeated string tagList = 5;
  google.protobuf.Timestamp createdAt = 6;
  google.protobuf.Timestamp updatedAt = 7;
  bool favorited = 8;
  uint32 favoritesCount = 9;

  Author author = 10;
}

message CreateArticleRequest {
  message CreateArticle {
    string title = 1;
    string description = 2;
    string body = 3;
    repeated string tagList = 4;
  }

  CreateArticle article = 1;
}

message UpdateArticleRequest {
  message UpdateArticle {
    string title = 1;
    string description = 2;
    string body = 3;
    repeated string tagList = 4;
  }

  UpdateArticle article = 1;
  string slug = 2;
}

message DeleteArticleRequest {
  string slug = 1;
}
message DeleteArticleReply {}

message FavoriteArticleRequest {
  string slug = 1;
}

message UnfavoriteArticleRequest {
  string slug = 1;
}
